--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,20 @@ button {
 	padding: 8px 0;
 	background: #3a2b58;
 }
+
+.scan-header {
+	width: 100%;
+	height: 150px;
+	background-color: orange;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2.2rem;
+	font-weight: bold;
+	color: white;
+}
+
+.scanner {
+	padding: 0;
+	margin: 0;
+}
