--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 	font-family: "Nunito", sans-serif;
 }
 
-button {
+/* button {
 	border: none;
 	outline: none;
 	width: 100%;
@@ -15,7 +15,7 @@ button {
 	letter-spacing: 1px;
 	background: #f09826;
 	cursor: pointer;
-}
+} */
 
 .login {
 	width: 100%;
@@ -136,4 +136,27 @@ button {
 .scanner {
 	padding: 0;
 	margin: 0;
+}
+
+.bottomComponent {
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+}
+.input {
+	width: 80%;
+
+	padding: 10px;
+	margin: 10px;
+}
+
+.increment {
+	display: flex;
+	padding: 0px 10px;
+	justify-content: center;
+}
+
+button {
+	padding: 1rem 4rem;
+	border-radius: 25px;
 }
