--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 	background: #f09826;
 	cursor: pointer;
 } */
-
+/* 
 .login {
 	width: 100%;
 	min-height: 100vh;
@@ -119,7 +119,7 @@
 	width: 86px;
 	padding: 8px 0;
 	background: #3a2b58;
-}
+} */
 
 .scan-header {
 	width: 100%;
