--- a/src/components/madeit/madeit.css
+++ b/src/components/madeit/madeit.css
@@ -1,19 +1,27 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 }
 input {
-	padding: 10px;
-	margin: 20%;
+	margin: 10px;
+	padding: 20px 15px;
 }
-
+.map {
+	width: 50%;
+	font-weight: bold;
+	font-size: 1rem;
+}
 .sendto {
 	background-color: green;
 	color: white;
 	font-size: 1rem;
 	font-weight: bold;
 	justify-content: center;
+	width: 50%;
 }
 .total-weight {
 	flex-direction: column;
+	align-content: center;
+	justify-content: center;
 }
