--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -2,32 +2,67 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	padding-top: 0px;
+	margin-top: 0px;
 }
 
-button {
+.login-buttons {
 	margin: 1rem;
 	display: flex;
 	justify-content: center;
+	border: none;
+	outline: none;
+	width: 100%;
+	padding: 15px 0;
+	color: #fff;
+	font-size: 16px;
+	letter-spacing: 1px;
+	background: none;
+	cursor: pointer;
 }
+
 .signin-button {
+	color: white;
+	background-color: #f09826;
 	width: 200px;
-	margin-left: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-decoration: none;
+	border: none;
+	outline: none;
+	font-size: 14pt;
 }
+
 .apple-button {
-	width: 400px;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: black;
 	color: white;
 	font-weight: bold;
+	font-size: 12pt;
+	padding: 1em;
 }
 
 .facebook-button {
-	width: 400px;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: darkblue;
 	color: white;
 	font-weight: bold;
+	font-size: 12pt;
+	padding: 1em;
 }
 
-input {
+.login-input {
 	padding: 1rem;
 	margin: 1rem;
+	border: 1px solid black;
+	border-radius: 5px;
+	width: 70%;
 }
