--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,36 @@ button {
 	background-color: transparent;
 	border: none;
 }
+
+.donate-header {
+	background-color: #f09826;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-bottom: 10px;
+	color: white;
+}
+
+.donation-form {
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+	margin: 10px;
+}
+
+.donation-label {
+	text-align: left;
+	margin-bottom: 5px;
+	font-size: 14pt;
+	font-weight: 600;
+	color: #5d5d5d;
+}
+
+.donation-input {
+	border: 1px solid #5d5d5d;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	height: 40px;
+	padding-left: 20px;
+}
