--- a/src/components/host/host.css
+++ b/src/components/host/host.css
@@ -44,6 +44,7 @@ input::placeholder {
 
 .event-submit {
 	width: 300px;
+	height: 50px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
