--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -25,6 +25,7 @@
 	color: white;
 	background-color: #f09826;
 	width: 200px;
+	height: 50px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
